--- a/examples/python-experiments.ipynb
+++ b/examples/python-experiments.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "62f3a58f-c807-4ffb-8936-9832ecde0cd7",
    "metadata": {},
    "outputs": [],
@@ -56,12 +56,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "e8f7d6a2-ab1e-4f5a-a5f0-92991bfe0348",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4520"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_weather_data_series = pd.read_json(\"https://owi-server.onrender.com/dataseries\")"
+    "df_weather_data_series = pd.read_json(\"https://owi-server.onrender.com/dataseries\")\n",
+    "len(df_weather_data_series)"
    ]
   },
   {
@@ -74,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "2b7c0280-9ca3-43e2-b661-ce5bdeeb061b",
    "metadata": {},
    "outputs": [
@@ -149,43 +161,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4069</th>\n",
-       "      <td>63978e69622ae200389b0044</td>\n",
-       "      <td>{}</td>\n",
-       "      <td>[got error `NameError: name 'FastSampling' isn...</td>\n",
-       "      <td>2022-12-12 20:26:16.940734830+00:00</td>\n",
+       "      <th>4515</th>\n",
+       "      <td>63979d34622ae200389b0202</td>\n",
+       "      <td>{'PT100/temperature': {'raw': {'resistance': 1...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>2022-12-12 21:29:23.638787932+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4070</th>\n",
-       "      <td>63978e96622ae200389b0045</td>\n",
-       "      <td>{'SYS/cpu/temperature': {'raw': {'adc': 14163}...</td>\n",
+       "      <th>4516</th>\n",
+       "      <td>63979d35622ae200389b0203</td>\n",
+       "      <td>{'PT100/temperature': {'raw': {'resistance': 1...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>2022-12-12 20:27:02.087065529+00:00</td>\n",
+       "      <td>2022-12-12 21:29:25.165638485+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4071</th>\n",
-       "      <td>63978e98622ae200389b0046</td>\n",
-       "      <td>{'SYS/cpu/temperature': {'raw': {'adc': 14179}...</td>\n",
+       "      <th>4517</th>\n",
+       "      <td>63979d37622ae200389b0204</td>\n",
+       "      <td>{'PT100/temperature': {'raw': {'resistance': 1...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>2022-12-12 20:27:03.755976582+00:00</td>\n",
+       "      <td>2022-12-12 21:29:26.654546297+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4072</th>\n",
-       "      <td>63978e9a622ae200389b0047</td>\n",
-       "      <td>{'SYS/cpu/temperature': {'raw': {'adc': 14179}...</td>\n",
+       "      <th>4518</th>\n",
+       "      <td>63979d38622ae200389b0205</td>\n",
+       "      <td>{'PT100/temperature': {'raw': {'resistance': 1...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>2022-12-12 20:27:05.438329718+00:00</td>\n",
+       "      <td>2022-12-12 21:29:28.190050615+00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4073</th>\n",
-       "      <td>63978e9c622ae200389b0048</td>\n",
-       "      <td>{'SYS/cpu/temperature': {'raw': {'adc': 14179}...</td>\n",
+       "      <th>4519</th>\n",
+       "      <td>63979d3a622ae200389b0206</td>\n",
+       "      <td>{'PT100/temperature': {'raw': {'resistance': 1...</td>\n",
        "      <td>[]</td>\n",
-       "      <td>2022-12-12 20:27:07.124327801+00:00</td>\n",
+       "      <td>2022-12-12 21:29:29.714145120+00:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>4074 rows × 4 columns</p>\n",
+       "<p>4520 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -196,37 +208,24 @@
        "3     6396e8accc5aae0033d6ea72   \n",
        "4     6396e8aecc5aae0033d6ea73   \n",
        "...                        ...   \n",
-       "4069  63978e69622ae200389b0044   \n",
-       "4070  63978e96622ae200389b0045   \n",
-       "4071  63978e98622ae200389b0046   \n",
-       "4072  63978e9a622ae200389b0047   \n",
-       "4073  63978e9c622ae200389b0048   \n",
+       "4515  63979d34622ae200389b0202   \n",
+       "4516  63979d35622ae200389b0203   \n",
+       "4517  63979d37622ae200389b0204   \n",
+       "4518  63979d38622ae200389b0205   \n",
+       "4519  63979d3a622ae200389b0206   \n",
        "\n",
-       "                                           measurements  \\\n",
-       "0     {'SYS/power/vsys': {'raw': {'adc': 14035}, 'va...   \n",
-       "1     {'SYS/power/vsys': {'raw': {'adc': 14035}, 'va...   \n",
-       "2     {'SYS/power/vsys': {'raw': {'adc': 14099}, 'va...   \n",
-       "3     {'SYS/power/vsys': {'raw': {'adc': 14035}, 'va...   \n",
-       "4     {'SYS/power/vsys': {'raw': {'adc': 14051}, 'va...   \n",
-       "...                                                 ...   \n",
-       "4069                                                 {}   \n",
-       "4070  {'SYS/cpu/temperature': {'raw': {'adc': 14163}...   \n",
-       "4071  {'SYS/cpu/temperature': {'raw': {'adc': 14179}...   \n",
-       "4072  {'SYS/cpu/temperature': {'raw': {'adc': 14179}...   \n",
-       "4073  {'SYS/cpu/temperature': {'raw': {'adc': 14179}...   \n",
-       "\n",
-       "                                                 errors  \\\n",
-       "0                                                    []   \n",
-       "1                                                    []   \n",
-       "2                                                    []   \n",
-       "3                                                    []   \n",
-       "4                                                    []   \n",
-       "...                                                 ...   \n",
-       "4069  [got error `NameError: name 'FastSampling' isn...   \n",
-       "4070                                                 []   \n",
-       "4071                                                 []   \n",
-       "4072                                                 []   \n",
-       "4073                                                 []   \n",
+       "                                           measurements errors  \\\n",
+       "0     {'SYS/power/vsys': {'raw': {'adc': 14035}, 'va...     []   \n",
+       "1     {'SYS/power/vsys': {'raw': {'adc': 14035}, 'va...     []   \n",
+       "2     {'SYS/power/vsys': {'raw': {'adc': 14099}, 'va...     []   \n",
+       "3     {'SYS/power/vsys': {'raw': {'adc': 14035}, 'va...     []   \n",
+       "4     {'SYS/power/vsys': {'raw': {'adc': 14051}, 'va...     []   \n",
+       "...                                                 ...    ...   \n",
+       "4515  {'PT100/temperature': {'raw': {'resistance': 1...     []   \n",
+       "4516  {'PT100/temperature': {'raw': {'resistance': 1...     []   \n",
+       "4517  {'PT100/temperature': {'raw': {'resistance': 1...     []   \n",
+       "4518  {'PT100/temperature': {'raw': {'resistance': 1...     []   \n",
+       "4519  {'PT100/temperature': {'raw': {'resistance': 1...     []   \n",
        "\n",
        "                               timestamp  \n",
        "0    2022-12-12 08:38:58.272576098+00:00  \n",
@@ -235,16 +234,16 @@
        "3    2022-12-12 08:39:07.303824557+00:00  \n",
        "4    2022-12-12 08:39:10.349171455+00:00  \n",
        "...                                  ...  \n",
-       "4069 2022-12-12 20:26:16.940734830+00:00  \n",
-       "4070 2022-12-12 20:27:02.087065529+00:00  \n",
-       "4071 2022-12-12 20:27:03.755976582+00:00  \n",
-       "4072 2022-12-12 20:27:05.438329718+00:00  \n",
-       "4073 2022-12-12 20:27:07.124327801+00:00  \n",
+       "4515 2022-12-12 21:29:23.638787932+00:00  \n",
+       "4516 2022-12-12 21:29:25.165638485+00:00  \n",
+       "4517 2022-12-12 21:29:26.654546297+00:00  \n",
+       "4518 2022-12-12 21:29:28.190050615+00:00  \n",
+       "4519 2022-12-12 21:29:29.714145120+00:00  \n",
        "\n",
-       "[4074 rows x 4 columns]"
+       "[4520 rows x 4 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,17 +262,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "id": "f297cd5b-c713-4f21-adc3-c0f53791c69d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['SYS/power/vsys', 'SYS/cpu/temperature', 'FAST-SYS/fast'], dtype='object')"
+       "Index(['SYS/power/vsys', 'SYS/cpu/temperature', 'FAST-SYS/fast',\n",
+       "       'PT100/temperature'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
