--- a/examples/r-experiments.ipynb
+++ b/examples/r-experiments.ipynb
@@ -20,7 +20,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "d60f0924-24ff-4b8a-9075-4f02d2a51119",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "#install.packages(\"httr\")\n",
@@ -40,7 +44,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "id": "62f3a58f-c807-4ffb-8936-9832ecde0cd7",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "library(httr)\n",
@@ -59,7 +67,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "e8f7d6a2-ab1e-4f5a-a5f0-92991bfe0348",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "weather_data_series_json_raw <- httr::GET(url = \"https://owi-server.onrender.com/dataseries\")"
@@ -77,7 +89,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "id": "720224f4-a28e-45c7-89bb-8e6ebf5eb419",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "weather_data_series_json = data.frame(\n",
@@ -101,7 +117,11 @@
    "cell_type": "code",
    "execution_count": 4,
    "id": "3b3a96fa-480b-4aa2-9f34-3f4483e10bba",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -179,25 +199,34 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "0c3446a1-e698-438a-9f22-fa590ef996fd",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [],
    "source": [
     "print(weather_data_series_json$measurements$'SYS/cpu/temperature'[c('value', 'unit')])"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "83e72ac1-c6bd-4604-a16c-02d35967aba1",
    "metadata": {},
    "source": [
-    "A média da temperatura da CPU do sistema é:"
+    "A média da temperatura do PT100 é:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "id": "ab13cb90-366c-41e3-9801-6257ceba2646",
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -1751,14 +1780,6 @@
    "source": [
     "mean(weather_data_series_json$measurements$'PT100/temperature'$value)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "09541ee4-d31e-4aff-a293-db3de031cbfe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
